# robocup-at-work

mcr_manipulation/mcr_joint_space_dynamics/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
mcr_manipulation/mcr_joint_space_dynamics/ros/include/mcr_arm_joint_space_dynamics/: arm_joint_space_dynamics.h
mcr_manipulation/mcr_joint_space_dynamics/ros/launch/: arm_joint_space_dynamics_nodelet.launch  arm_joint_space_dynamics_standalone.launch
mcr_manipulation/mcr_joint_space_dynamics/ros/src/: arm_joint_space_dynamics.cpp
mcr_manipulation/mcr_joint_space_dynamics/ros/test/: afterJoint2ExceededI2t.bag  applyForceByHand.bag  applyForceDownwards.bag  applyForceOverCurrentError.bag  candle.bag  folded.bag  forceDownwardsError.txt  joint2.bag  mir-sim-param-dump.yaml  moveJoint2.bag  moveJoint2WithForce.bag  moveJoint3.bag  mvoingJoint4.bag  only_arm_param_dump.yaml  outputcandle.bag  outputfolded.bag  outputjoint0.bag  outputjoint2.bag  outputmovingArm.bag  plotBag.py  pose1.bag  pose2.bag  pose3.bag  pose4.bag  pose5.bag  pose6.bag  pose7.bag  pregrasp.bag  test_rviz_config.rviz  updateBag.py
mcr_manipulation/mcr_joint_space_dynamics/ros/test/newgripper_bags/: go_candle.bag  go_candle_1.bag  go_folded.bag
mcr_manipulation/mcr_torque_comparator/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
mcr_manipulation/mcr_torque_comparator/ros/config/: torque_comparator.yaml
mcr_manipulation/mcr_torque_comparator/ros/include/torque_comparator/: torque_comparator.h
mcr_manipulation/mcr_torque_comparator/ros/launch/: torque_comparator_nodelet.launch  torque_comparator_standalone.launch
mcr_manipulation/mcr_torque_comparator/ros/src/: torque_comparator.cpp
mcr_manipulation/mcr_wrench_estimation/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
mcr_manipulation/mcr_wrench_estimation/ros/config/: wrench_estimation.yaml
mcr_manipulation/mcr_wrench_estimation/ros/include/wrench_estimation/: wrench_estimation.h
mcr_manipulation/mcr_wrench_estimation/ros/launch/: wrench_all.launch  wrench_estimation_nodelet.launch  wrench_estimation_standalone.launch
mcr_manipulation/mcr_wrench_estimation/ros/src/: wrench_estimation.cpp
